--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,10 @@
         url('../src/assets/fonts/Almarai/Almarai-ExtraBold.ttf');
 }
 
+body {
+  color: #7a8088;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
